--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 RESTs_API_For_Onging_Project\.env
 RESTs_API_For_Onging_Project\node_modules
 RESTs_API_For_Onging_Project\Let's_Login.txt
+.env
+REST_API_Medicine-Store-Project-Using-ExpressJS_NodeJS\.env
+REST_API_Medicine-Store-Project-Using-ExpressJS_NodeJS\node_modules
