--- a/REST_API_Medicine-Store-Project-Using-ExpressJS_NodeJS/package.json
+++ b/REST_API_Medicine-Store-Project-Using-ExpressJS_NodeJS/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "react-scripts build",
     "start": "nodemon server.js",
+    "server": "nodemon server.js",
     "client": "npm start --prefix ./client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
